# Isla-SNN

./: .gitignore  LICENSE  README.md  chat.py  main.py  pyproject.toml  requirements.txt  run_benchmark.py  run_eval.py
configs/: medium.json  medium_v2.json  nano_spike.json  v3_150m.json
examples/: config_150m.json  config_50m.json  config_nano.json
isla/: __init__.py  config.py
isla/data/: __init__.py  loader.py
isla/inference/: __init__.py  generate.py  speed.py
isla/model/: __init__.py  architecture.py  attention.py  neurons.py
isla/training/: __init__.py  trainer.py
notebooks/: 00_dataset_caching.ipynb  01_train.ipynb  02_inference.ipynb  03_finetune_chat.ipynb  04_inference_chat.ipynb
scripts/: prepare_data.py  prepare_data_v2.py  prepare_data_v3.py
tests/: test_model.py  verify_all.py
