[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "isla-snn"
version = "0.2.0"
description = "Lightweight spiking neural network framework for language modeling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["spiking-neural-network", "language-model", "spike-synchrony", "attention"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "tokenizers>=0.13.0",
]

[project.optional-dependencies]
logging = ["wandb>=0.15.0"]
plots = ["matplotlib>=3.7.0"]
dev = ["pytest>=7.0", "wandb>=0.15.0", "matplotlib>=3.7.0"]

[project.scripts]
isla-train = "main:main"

[tool.setuptools.packages.find]
include = ["isla*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
